# GithubCICDChecker

./: .gitignore  Cargo.toml  README.md  index.html
.githooks/: commit-msg
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  deploy.yml
src/: lib.rs  main.rs
src/checks/: definitions.rs  engine.rs  mod.rs  runner.rs
src/components/: ai_review_panel.rs  app.rs  footer.rs  header.rs  mod.rs  results.rs  score_gauge.rs  search_bar.rs
src/models/: ai_review.rs  check.rs  mod.rs  score.rs
src/services/: ai_client.rs  client.rs  mod.rs  types.rs
styles/: main.css
