[package]
name = "github-cicd-checker"
version = "0.1.0"
edition = "2021"
description = "Analyze and score the CI/CD quality of any GitHub repository"
license = "MIT"

[dependencies]
yew = { version = "0.22", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-net = { version = "0.6", features = ["http"] }
gloo-timers = "0.3"
gloo-utils = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
web-sys = { version = "0.3", features = [
    "HtmlInputElement",
    "Window",
    "console",
] }
js-sys = "0.3"
base64 = "0.22"
regex = "1"
log = "0.4"
wasm-logger = "0.2"
